[package]
name = "test_orchard"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand_chacha = "0.3"
incrementalmerkletree = "0.3"

[dependencies.orchard]
path = "../components/orchard"

[dependencies.halo2_proofs]
path = "../components/halo2/halo2_proofs"

